--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,12 @@
-Welcome to Force of Nature
+
+<div class="panel" id="welcome">
+  <h2 class="panel-text"> Join Our Force! </h2>
+</div>
+
+<div class="panel" id="fixed">
+  <h2 class="panel-text"> Blah blah blah </h2>
+</div>
+
+<div class="panel" id="welcome">
+  <h2 class="panel-text"> Join Our Force! </h2>
+</div>
