--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container-fluid d-flex justify-content-center">
+<div class="col-lg-4">
 <h1> Sign-up </h1>
 <%= simple_form_for(@user) do |f| %>
         <%= f.input :first_name%>
@@ -5,6 +7,7 @@
         <%= f.input :email%>
         <%= f.input :password%>
         <%= f.input :password_confirmation%>
-        <%= f.submit%>
-    </div>
+        <%= f.submit class:"btn btn-primary"%>
 <%end%>
+</div>
+</div>
