Events Saving and showing

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,11 @@
   </head>
 
   <body>
+    <% if flash[:notice].present? %>
+
+          <%= flash[:notice] %>
+        
+      <% end %>
     <%= yield %>
   </body>
 </html>
