--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -6,18 +6,18 @@
 <%= f.input :location, label: 'Location'%>
 <%= f.input :additional_info, label: 'Additional Information'%>
 <%= f.input :attachment_url, label: 'Attachment URL'%>
-<%= f.input :event_category,  :collection => %w[category]%>
+
 
 <div>
-        <%= form.label :category_id %>
-        <%= form.select :category_id, @categories.map { |category| [category.name, category.id] } %>
+        <%= f.label :event_category_id %>
+        <%= f.select :event_category_id, @event_categories.map { |category| [category.name, category.id] } %>
 </div>
+
 <div>
-        <%= form.label :leader %>
-        <%= form.select :category_id, @lead_users.map { |leader| [lead_users.name, lead_users.id] } %>
+        <%= f.label :lead_id %>
+        <%= f.select :lead_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
 </div>
 
 
-<%= f.input :leader_id, :collection => %w[leader] %>
 <%= f.submit%>
 <% end %>
