Add teams controller.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
 
           <%= flash[:notice] %>
         
+      <% elsif flash[:alert].present? %>
+
+          <%= flash[:alert] %>
       <% end %>
+      
     <%= yield %>
   </body>
 </html>
