Fix session log in page and add welcome to navbar with current user full name.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,9 @@
         </ul>
 
         <ul class="nav-item ml-auto">
+          <% if current_user %>
+            <span>Welcome, <%= current_user.full_name %></span>
+          <% end %>
           <%= link_to 'Sign In', new_session_path, class: "nav-link" %>
         </ul>
 
