Add small changes to layouts and dates on events show page.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,8 @@ a.nav-link {
 }
 
 #fixed {
-  background: blue;
+  background: #1677EB;
+  
   background-attachment: scroll;
 }
 
@@ -50,3 +51,6 @@ a.nav-link {
 .navbar {
   background-image: image-url('bear.png');
 }
+
+
+// #4EADEB
