--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,14 @@
           <li class="nav-item ">
             <%= link_to 'Home', root_path, class: "nav-link" %>
           </li>
-          <li class="nav-item">
+<!--           <li class="nav-item">
             <a class="nav-link" href="#">Features</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Pricing</a>
-          </li>
+          </li> -->
           <li class="nav-item">
-            <a class="nav-link" href="#">Disabled</a>
+            <%= link_to 'Calendar', events_path, class: "nav-link" %>
           </li>
         </ul>
 
