--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,8 +1,31 @@
 
-<% @teams.each do |team| %>
-	<h3><%= team.name %></h3>
-	<% team.members.each do |member| %>
-		<%= member.full_name %>
-	<% end %>
-<% end %>
+<div class="container">
+	<div style="display: flex; justify-content: center;">
+		<h2>Operational Teams</h2>
+	</div>
+
+	<div class="row flex-column">
+
+		<% @operational_teams.each do |team| %>
+			<h3><%= team.name %></h3>
+			<% team.members.each do |member| %>
+				<%= member.full_name %>
+			<% end %>
+		<% end %>
+	</div>
+
+	<div style="display: flex; justify-content: center;">
+		<h2>Regional Teams</h2>
+	</div>
+
+	<div class="row flex-column">
+
+		<% @regional_teams.each do |team| %>
+			<h3><%= team.name %></h3>
+			<% team.members.each do |member| %>
+				<%= member.full_name %>
+			<% end %>
+		<% end %>
+	</div>
+</div>
 
