--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,7 +18,8 @@
 		    it. If the object is `nil`, then it will immediately return `nil`.
 		%>
 		<p>Created By <%= @event.creator&.full_name %></p>
-		<p>Team Lead <%= @lead&.full_name %></p>
+		<p>Team: <%= @event.team.name %></p>
+		<p>Event Lead <%= @lead&.full_name %></p>
 		<%= link_to 'Sign Up!', event_neweventsignup_path(@event) %>
 	</div>
 
