Add team show page for current users teams and links to associated google drive docs.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -53,4 +53,9 @@ a.nav-link {
 }
 
 
-// #4EADEB
+//Styling the Team Lead pages:
+
+.team-lead-show-item {
+  border: 1px solid black;
+  margin: 10px;
+}
