--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,5 +1,6 @@
-
-<div class="container">
-	<h1> New Event</h1>
+<div class="container-fluid d-flex justify-content-center">
+	<div class="col-lg-8">
+	<h1 class="page-head"> New Event</h1>
 	<%= render 'form'%>
+</div>
 </div>
