--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,32 +9,16 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-md navbar-light bg-faded">
-  <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <a class="navbar-brand" href="#"> <%=image_tag("logo.PNG") %> </a>
-  <div class="collapse navbar-collapse" id="navbarNav">
-    <ul class="navbar-nav">
-      <li class="nav-item ">
-        <%= link_to 'Home', root_path, class: "nav-link" %>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Features</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Pricing</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">Disabled</a>
-      </li>
-    </ul>
-=======
-    <nav class="navbar navbar-expand-md navbar-light">
+
+    <% if controller.controller_name == "welcome" && controller.action_name == "index" %>
+    <nav class="navbar navbar-expand-md">
+    <% else %>
+        <nav class="navbar navbar-expand-md" style="background-color:#000" >
+      <% end %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"> <%=image_tag("logo.PNG") %> </a>
+      <a class="navbar-brand" href="#"> <%=image_tag("logo-white.png", width:'200') %> </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
@@ -50,21 +34,20 @@
             <%= link_to 'Calendar', events_path, class: "nav-link" %>
           </li>
         </ul>
-        <ul class="nav-item ml-auto">
+        <ul class="navbar-nav second-nav ml-auto">
           <% if current_user %>
             <span>Welcome, <%= current_user.full_name %></span>
             <%= link_to('Sign Out', session_path, method: :delete) %>
           <% else %>
-            <%= link_to 'Sign In', new_session_path, class: "nav-link" %>
+            <%= link_to 'Sign In', new_session_path, class: "nav-link btn btn-primary" %>
           <% end %>
         </ul>
-
       </div>
     </nav>
 
     <% if flash[:notice].present? %>
 
-          <%= flash[:notice] %>
+          <div class="alert alert-sucess"> <%= flash[:notice] %> </div>
 
       <% end %>
       <%= yield %>
