--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <% if controller.controller_name == "welcome" && controller.action_name == "index" %>
     <nav class="navbar navbar-expand-md">
     <% else %>
-        <nav class="navbar navbar-expand-md" style="background-color:#000" >
+        <nav class="navbar navbar-expand-md" style="background-color:navy" >
       <% end %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -36,10 +36,10 @@
         </ul>
         <ul class="navbar-nav second-nav ml-auto">
           <% if current_user %>
-            <span>Welcome, <%= current_user.full_name %></span>
-            <%= link_to('Sign Out', session_path, method: :delete) %>
+            <span style="color:lightblue"> Welcome, <%= current_user.full_name %>  </span>
+            <li class="nav-item"> <%= link_to('Sign Out', session_path, method: :delete) %> </li>
           <% else %>
-            <%= link_to 'Sign In', new_session_path, class: "nav-link btn btn-primary" %>
+            <li class="nav-item"> <%= link_to 'Sign In', new_session_path, class: "nav-link btn btn-primary" %> </li>
           <% end %>
         </ul>
       </div>
@@ -51,6 +51,20 @@
 
       <% end %>
       <%= yield %>
+
+    <div class="footer">
+    <div class="footer-social-icons">
+    <p>©Vlad Plotnikov 2018</p>
+        <ul class="social-icons">
+            <li><a href="" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-rss"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a href="" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+        </ul>
+    </div>
+    </div>
 
   </body>
 </html>
