added button to show page in modal

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -36,6 +36,7 @@
                         <%= submit_tag "Sign up!"%> 
                     <% end %>
                     </div>
+                        <button id='moredetails' type="button" class="btn btn-secondary">View More Details</button>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
                     </div>
