Mailers branch, everything working except reminder emails

--- a/app/views/event_sign_up_mailer/event_sign_up.html.erb
+++ b/app/views/event_sign_up_mailer/event_sign_up.html.erb
@@ -4,13 +4,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h3> Reminder! </h3>
-    <h5>  You signed up for <%= @event.name %> tomorrow! </h5>
+    <h5> Thank you for signing up for: <%= @event.name %>
       <p> The event details are: </p>
       <p> Date: <%= @event.date %>  </p>
       <p> Start Time: <%= @event.start_time %> </p>
       <p> Location: <%= @event.location %> </p>
-      <p> Additional_info <%= @event.addiional_info %> </p>
+      <p> Additional Info <%= @event.additional_info %> </p>
 
     <p>We look forward to seeing you there!</p>
   </body>
