--- a/app/views/events_mailer/notify_event_creator.text.erb
+++ b/app/views/events_mailer/notify_event_creator.text.erb
@@ -1,8 +1,8 @@
-Thank you or signing up for <%= @event.name %>
+Thank you for creating the event: <%= @event.name %>
 The event details are:
 Date: <%= @event.date %>
 Start Time: <%= @event.start_time %>
 Location: <%= @event.location %>
-Additional_info <%= @event.addiional_info %>
+Additional Info <%= @event.additional_info %>
 
 We look forward to seeing you there!
