--- a/app/views/reminder_mailer/reminder.text.erb
+++ b/app/views/reminder_mailer/reminder.text.erb
@@ -1,7 +1,7 @@
-Reminder! You signed up for <%= @event.name %> tomorrow!
+Reminder! You have <%= @event.name %> tomorrow!
 The event details are:
 Date: <%= @event.date %>
 Start Time: <%= @event.start_time %>
 Location: <%= @event.location %>
-Additional_info <%= @event.addiional_info %>
+Additional_info <%= @event.additional_info %>
 We look forward to seeing you there!
