--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -4,20 +4,18 @@
 <%= f.input :start_time, label: 'Start Time:'%>
 <%= f.input :end_time, label: 'End Time'%>
 <%= f.input :location, label: 'Location'%>
+<div>
+  <%= f.label :lead_id %>
+  <%= f.select :lead_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
+</div>
+<div>
+  <%= f.label :event_category_id %>
+  <%= f.select :event_category_id, @event_categories.map { |category| [category.name, category.id] } %>
+</div>
+
 <%= f.input :additional_info, label: 'Additional Information'%>
 <%= f.input :attachment_url, label: 'Attachment URL'%>
 
 
-<div>
-        <%= f.label :event_category_id %>
-        <%= f.select :event_category_id, @event_categories.map { |category| [category.name, category.id] } %>
-</div>
-
-<div>
-        <%= f.label :lead_id %>
-        <%= f.select :lead_id, @lead_users.map { |leader| [leader.first_name, leader.id] } %>
-</div>
-
-
-<%= f.submit%>
+<%= f.submit "Create Event", class:"btn btn-primary"%>
 <% end %>
