--- a/app/views/eventsignup/new.html.erb
+++ b/app/views/eventsignup/new.html.erb
@@ -1,8 +1,11 @@
-<%= form_tag("newsignup", method: "post") do %>
-    <div class="field">
-         <%= label(:email, "Email:") %>
-        <%= email_field(:email, "email") %>
+ <div class="row d-flex justify-content-center">
+  <div class="col-md-5">
+<%= form_tag("newsignup", method: "post", class:"form") do %>
+    <div class="form-group">
+         <%= label(:email, "Email", class:'form-label') %>
+        <%= email_field(:email, "email", class: "form-control") %>
     </div>
-
-    <%= submit_tag "Sign up!"%> 
+    <%= submit_tag "Sign up!", class: "btn btn-primary"%>
 <% end %>
+  </div>
+ </div>
