--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require fullcalendar
+*= require bootstrap-datepicker 
  *= require_tree .
  *= require_self
  */
@@ -40,7 +41,7 @@ a.nav-link {
 
 #fixed {
   background: #1677EB;
-  
+
   background-attachment: scroll;
 }
 
