--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>ThisSectionClosed</title>
+    <title>Force of Nature</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
+    <%= favicon_link_tag 'fon_favicon.ico' %>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"> <%=image_tag("logo-white.png", width:'200') %> </a>
+      <a class="navbar-brand" href="#"> <%=image_tag("logo.PNG", width:'200') %> </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
@@ -46,11 +46,10 @@
     </nav>
 
     <% if flash[:notice].present? %>
+      <div class="alert alert-sucess"> <%= flash[:notice] %> </div>
+    <% end %>
+    <%= yield %>
 
-          <div class="alert alert-sucess"> <%= flash[:notice] %> </div>
-
-      <% end %>
-      <%= yield %>
-
+    <%= render 'layouts/footer' %>
   </body>
 </html>
