seeds fixed, models fixed -- removed hardcode ids from seeds

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -14,8 +14,17 @@
                         </div>
                     <% end %>
             </div>
+            <div class='card-header'><strong>General Volunteers: </strong><%= @stats[:genvol] %></div>
+                    <% @genvol.each do |volunteer| %>
+                        <div class="mt-2 mb-2 border">
+                        <strong>Full name:</strong> <%= volunteer.full_name %>
+                        <br>
+                        <strong>Email:</strong> <%= volunteer.email %>
+                        </div>
+                    <% end %>
+            </div>
             <strong>Guests: </strong> <%= @stats[:guests] %>
-            <ul>
+            <u
                 <% @guest.each do |guest| %>
                     <li><%= guest.email %></li>
                 <% end %>
