Add team styling

--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -1,6 +1,6 @@
 
 
-<%= form_for @team do |f| %>
+<%= simple_form_for @team do |f| %>
    <% if @team.errors.present? %>
      <p>
        <%= @team.errors.full_messages.join(', ') %>
