--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,7 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require fullcalendar
-*= require bootstrap-datepicker 
+*= require bootstrap-datepicker
  *= require_tree .
  *= require_self
  */
@@ -433,10 +433,59 @@ h1.page-head {
         color: white;
     }
 
-//Styling the Team Lead pages:
+//Styling pages:
 
-.team-lead-show-item {
-  border: 1px solid black;
-  margin: 10px;
+
+.card.dash {
+  display: flex;
+  padding: 15px 5px;
+  margin: 15px 5px;
+  border: 2px black solid;
+  text-align: center;
 }
 
+.card.item {
+  display: flex;
+  padding: 15px;
+  margin: 15px 5px;
+  border: 2px black solid;
+  text-align: center;
+}
+
+table {
+  text-align: left;
+}
+
+
+
+.card.dash:hover {
+  background-color: rgb(239, 239, 239);
+}
+
+.content-link, .content-link:hover {
+  color: black;
+  text-decoration: none;
+}
+
+.card.details {
+  text-align: left;
+  margin: 0px 5px;
+  border-top: 0;
+  margin-top: -20px;
+  padding: 15px 5px;
+ border-left: 2px black solid;
+ border-right: 2px black solid;
+ border-bottom: 2px black solid;
+}
+
+.files {
+  text-align: left;
+}
+
+.flexi {
+  width: 50%;
+}
+
+.team {
+  font-size: 20px;
+}
