--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,27 +1,40 @@
 
-<div class="container">
-	<div class="row flex-column" style="align-items: center">
+<div class="container-fluid">
+	<p>dashboard/teams</p>
 		<h2><%= @team.name %></h2>
 		<h4><%= @team.team_category.name %> team</h4>
-	</div>
-	<div class="row">
-		<div class="col-md-6 team-lead-show-item">
-			<h4>Members: </h4>
+	<div class="row d-flex">
+		<div class="col-md-6">
+			<div class="card item">
+				<h4>Members </h4>
+			<table class="table table-responsive">
+				<thead>
+					<tr>
+						<th scope="col"> Name</th>
+						<th scope="col"> Email</th>
+					</tr>
+				</thead>
 			<% @team.members.each do |member| %>
 				<% if member.id === current_user.id %>
 				<% else %>
-					<p>Name: <%= member.full_name %></p>
-					<p>Email: <%= member.email %></p>
+				<tr>
+					<td> <%= member.full_name %></td>
+					<td> <%= member.email %></td>
+				</tr>
 				<% end %>
 			<% end %>
+		</table>
+		 </div>
 		</div>
 		<div class="col-md-6 team-lead-show-item">
+			<div class="card item">
 			<h4>Briefings</h4>
 			<% if @team.name === 'Shadow' %>
 				<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Canvass Google Drive Documents</a>
 			<% elsif @team.name === 'Misty' %>
 				<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Canvass Google Drive Documents</a>
 			<% end %>
+		</div>
 		</div>
 	</div>
 </div>
