--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <% if controller.controller_name == "welcome" && controller.action_name == "index" %>
     <nav class="navbar navbar-expand-md">
     <% else %>
-        <nav class="navbar navbar-expand-md" style="background-color:navy" >
+        <nav class="navbar navbar-expand-md" style="background-color:#293d52" >
       <% end %>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
