--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -218,12 +218,14 @@ h1.page-head {
 #welcome {
   background-image: image-url('bear.png');
   background-attachment: fixed;
-  flex-direction: column;
+  background-position: top;
+    background-size: cover;
+
 }
 
 #welcome2 {
   background-image: image-url('forest.jpg');
-  background-attachment: fixed;
+  background-size: cover;
 }
 
 #fixed {
@@ -450,8 +452,6 @@ h1.page-head {
 table {
   text-align: left;
 }
-
-
 
 .card.dash:hover {
   background-color: rgb(239, 239, 239);
