--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#"> <%=image_tag("logo-white.png", width:'200') %> </a>
+      <a class="navbar-brand" href="/"> <%=image_tag("logo-white.png")%> </a>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item ">
@@ -34,12 +34,13 @@
             <%= link_to 'Calendar', events_path, class: "nav-link" %>
           </li>
         </ul>
-        <ul class="navbar-nav second-nav ml-auto">
+
+        <ul class="navbar-nav ml-auto">
           <% if current_user %>
-            <span style="color:lightblue"> Welcome, <%= current_user.full_name %>  </span>
+            <li class="nav-item nav-link" style="color:lightblue"> Welcome, <%= current_user.full_name %>  </li>
             <li class="nav-item"> <%= link_to('Sign Out', session_path, method: :delete, class: 'nav-link btn btn-primary') %> </li>
             <% if current_user.user_category.name === 'Team Lead' %>
-              <%= link_to 'Your Teams', teams_path %>
+             <%= link_to 'Your Teams', teams_path, class:"nav-link" %>
             <% end %>
           <% else %>
             <li class="nav-item"> <%= link_to 'Sign In', new_session_path, class: "nav-link btn btn-primary" %> </li>
