--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -60,15 +60,22 @@
             <% end %>
         </tbody>
     </table>
-    <div class="row">
-        <div class="card-block">
+    <div>
+        <div class="card-block row">
         <% @teams.each do |team| %>
-            <div class="card col-3">
+            <% if team.members.count > 0 %>
+            <div class="card col-4 p-0 mt-2">
                 <div class="card-header"><%= team.name %></div>
+                <div class="list-group">
                 <% team.members.each do |member| %>
-                    <div class="card-body"><%= member.full_name %></div>
+                   <a href="#" class="list-group-item list-group-item-action"> <%= member.full_name %></a>
+                   <% user_team_record = UserTeam.where(user: member.id).where(team: team.id).first%>
+                   <%= link_to 'Destroy', userteam_url(user_team_record), method: :delete, data: {confirm: 'Are you sure?'} %>
+                   <br>
                 <% end %>
+                </div>
             </div>
+            <% end %>
         <% end %>
         </div>
     </div>
