--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,7 +26,7 @@
 	</div>
 		<p> <%= @event.additional_info %> </p>
 		<p> <%= @event.attachment_url %></p>
-		<%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-primary" %>
+		<!-- <%= link_to 'Sign Up for this Event!', event_neweventsignup_path(@event), class: "btn btn-primary" %> -->
   </div>
 	<div class="col-md">
 
@@ -41,7 +41,7 @@
 		<p> <%= @lead&.full_name %></p>
 		<h3>Created By </h3>
 		<p> <%= @event.creator&.full_name %></p>
-    <h3>Team</h3> 
+    <h3>Team</h3>
     <p><%= @event.team&.name %></p>
 	</div>
 <%= link_to 'Edit', edit_event_path(@event) %>
