--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,27 +1,71 @@
 
 <div class="container">
-	<div class="row flex-column" style="align-items: center">
-		<h2><%= @team.name %></h2>
-		<h4><%= @team.team_category.name %> team</h4>
-	</div>
-	<div class="row">
-		<div class="col-md-6 team-lead-show-item">
-			<h4>Members: </h4>
-			<% @team.members.each do |member| %>
+<div class="card text-center">
+  <div class="card-header card card-inverse" style="background-color: #333; border-color: #333;">
+    <h2 class="text-white">Team: <%= @team.name %></h2>
+  </div>
+  <div class="col-md-12 card-block text-center" style="align-content: center;">
+
+			<div class="card-block col-md-11 team-lead-show-item m-auto pb-1">
+				<h4>Members: </h4>
+				<% @team.members.each do |member| %>
 				<% if member.id === current_user.id %>
 				<% else %>
-					<p>Name: <%= member.full_name %></p>
-					<p>Email: <%= member.email %></p>
+					<p >Name: <%= member.full_name %></p>
+					<p >Email: <%= member.email %></p>
 				<% end %>
-			<% end %>
-		</div>
-		<div class="col-md-6 team-lead-show-item">
+				<% end %>
+  		</div>
+		<div class="card-block col-md-11 team-lead-show-item test m-auto">
 			<h4>Briefings</h4>
-			<% if @team.name === 'Shadow' %>
-				<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Canvass Google Drive Documents</a>
-			<% elsif @team.name === 'Misty' %>
-				<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Canvass Google Drive Documents</a>
-			<% end %>
+				<% if @team.name === 'Shadow' %>
+					<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Canvass Google Drive Documents</a>
+				<% elsif @team.name === 'Misty' %>
+					<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Canvass Google Drive Documents</a>
+				<% end %>
 		</div>
 	</div>
+	</div>
 </div>
+
+<!--
+<div class="container">
+	<div class="card text-center">
+		<div class="card-header">
+			<h2><%= @team.name %></h2>
+		</div>
+		<div class="row">
+
+		  <div class="col-sm-6">
+		    <div class="card">
+		      <div class="card-block">
+		        <h3 class="card-title">Members:</h3>
+		        <p class="card-text">
+							<% @team.members.each do |member| %>
+						<% if member.id === current_user.id %>
+						<% else %>
+							<p >Name: <%= member.full_name %></p>
+							<p >Email: <%= member.email %></p>
+						<% end %>
+						<% end %></p>
+		      </div>
+		    </div>
+		  </div>
+		  <div class="col-sm-6">
+		    <div class="card">
+		      <div class="card-block">
+		        <h3 class="card-title">Briefings</h3>
+		        <p class="card-text"><% if @team.name === 'Shadow' %>
+							<a href="https://drive.google.com/drive/folders/105qoVeDX9uucrGCXwig0rsy6YI2tlbdD">Canvass Google Drive Documents</a>
+						<% elsif @team.name === 'Misty' %>
+							<a href="https://drive.google.com/drive/folders/1H2OAq3uZ5SReSvfpr4eg2QXfDt1a-Xgb">Canvass Google Drive Documents</a>
+						<% end %></p>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+	</div>
+
+
+  
+</div> -->
