--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
 
-<div class="container-fluid d-flex justify-content-center">
-	<div class="col-lg-4">
+<div class="container-fluid d-flex justify-content-center ">
+	<div class="col-lg-4 small-height">
 		<h1 class="page-head"> Sign-up </h1>
 		<%= simple_form_for(@user) do |f| %>
 		        <%= f.input :first_name%>
