--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,2 +1,6 @@
-<h1> Edit Event</h1>
-<%= render 'form'%>
+div class="container-fluid d-flex justify-content-center">
+	<div class="col-lg-8">
+	<h1 class="page-head"> Edit Event</h1>
+	<%= render 'form'%>
+</div>
+</div>
