--- a/app/views/eventsignup/new.html.erb
+++ b/app/views/eventsignup/new.html.erb
@@ -1,5 +1,5 @@
  <div class="row d-flex justify-content-center">
-  <div class="col-md-5">
+  <div class="col-md-5 small-height">
 <%= form_tag("newsignup", method: "post", class:"form") do %>
     <div class="form-group">
          <%= label(:email, "Email", class:'form-label') %>
