--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -52,13 +52,9 @@
 
   .footer_up {
       position: relative;
-      right: 0;
-      bottom: 0;
-      left: 0;
       padding: .5rem;
-      margin-top: 0px;
+      margin: 0px;
       padding-top: 12px;
-      padding-bottom: 0;
       background-color: #293d52;
       text-align: center;
       color: #fff;
