--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,10 +37,13 @@
 
         <ul class="navbar-nav ml-auto">
           <% if current_user %>
+            <% if current_user.user_category.name === 'Admin' %>
+              <%= link_to 'Admin Dashboard', admin_dashboard_index_path, class: 'nav-link', style: 'color: lightblue' %>
+            <% end %>
             <li class="nav-item nav-link" style="color:lightblue"> Welcome, <%= current_user.full_name %>  </li>
             <li class="nav-item"> <%= link_to('Sign Out', session_path, method: :delete, class: 'nav-link btn btn-primary') %> </li>
             <% if current_user.user_category.name === 'Team Lead' %>
-             <%= link_to 'Your Teams', teams_path, class:"nav-link" %>
+             <%= link_to 'Your Teams', teams_path, class: "nav-link" %>
             <% end %>
           <% else %>
             <li class="nav-item"> <%= link_to 'Sign In', new_session_path, class: "nav-link btn btn-primary" %> </li>
